[tool.poetry]
name = "apy4i"
version = "0.1.0"
description = "Fourth version of my API"
authors = ["L3viathan <git@l3vi.de>"]

[tool.poetry.dependencies]
python = "^3.8"
quart_trio = "^0.5.1"
textflip = "^0.3.0"
asks = "^2.3.7"
hypercorn = "^0.10.1"
chordy = "0.2.0"

[tool.poetry.dev-dependencies]
ipython = "^7.15.0"
ipdb = "^0.13.2"
pylint = "^2.5.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
